# velocity_share

./: README.md
robot_vel_info_testing/: CMakeLists.txt  package.xml
robot_vel_info_testing/src/: publish_robot_velocity.py
velocity_share/: CMakeLists.txt  package.xml
velocity_share_action_server/: CMakeLists.txt  README.md  package.xml
velocity_share_action_server/include/velocity_share_action_server/: velocity_share_action_server.h
velocity_share_action_server/src/: velocity_share_action_server.cpp
velocity_share_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
velocity_share_layer/cfg/: VelocityShareLayer.cfg
velocity_share_layer/include/velocity_share_layer/: velocity_share_layer.h
velocity_share_layer/src/: velocity_share_layer.cpp
velocity_share_msgs/: CMakeLists.txt  package.xml
velocity_share_msgs/msg/: RobotVelInfo.msg  RobotVelInfoStamped.msg
velocity_share_visualizer/: CMakeLists.txt  package.xml
velocity_share_visualizer/src/: velocity_share_visualizer.cpp
