<?xml version="1.0"?>
<package format="2">
  <name>velocity_share_action_server</name>
  <version>0.0.0</version>
  <description>The velocity_share_action_server package</description>

  <maintainer email="limpert@fh-aachen.de">Nicolas Limpert</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>


  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
