<?xml version="1.0"?>
<package format="2">
  <name>velocity_share_msgs</name>
  <version>0.0.1</version>
  <description>The velocity_share_msgs package. This package contains message definitions to share velocity and position information across multiple robots.</description>

  <maintainer email="limpert@fh-aachen.de">nlimpert</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
